--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Special+Elite" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet"> 
     
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
@@ -200,7 +202,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Leader</h4>
-                                    <h4 class="subheading">Toalbalp</h4>
+                                    <h4 class="player-heading">Toalbalp</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
