Logo-Änderung und Verbesserung des layouts

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet"> 
     
     <!-- Theme CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
+    <link href="css/bcagency.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +42,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">BundesCobras</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img height="50px" src="BundesCobras.svg"></img></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#portfolio">Matches</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Gamer</a>
+                        <a class="page-scroll" href="#about">Team</a>
                     </li>
                     
                     <li>
@@ -188,8 +188,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Gamer</h2>
-                    <h3 class="section-subheading text-muted">Unser Team</h3>
+                    <h2 class="section-heading">Team</h2>
+                    <h3 class="section-subheading text-muted">Aktuelle Spieler</h3>
                 </div>
             </div>
             <div class="row">
@@ -201,7 +201,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Leader</h4>
+                                    <h4>Ingame Leader</h4>
                                     <h4 class="subheading">Toalbalp</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -215,7 +215,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Co-Leader</h4>
+                                    <h4>Rifler/Smg</h4>
                                     <h4 class="subheading">MrFabou</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -229,7 +229,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>AWP-Player</h4>
+                                    <h4>Rifler/AWP</h4>
                                     <h4 class="subheading">7Joni7</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -243,7 +243,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Player</h4>
+                                    <h4>Rifler</h4>
                                     <h4 class="subheading">Paytix</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -257,7 +257,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Player</h4>
+                                    <h4>Rifler</h4>
                                     <h4 class="subheading">Batakes</h4>
                                 </div>
                                 <div class="timeline-body">
