--- a/index.html
+++ b/index.html
@@ -247,7 +247,11 @@
                                     <h4 class="subheading">Paytix</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Name:Justin
+                                                          Alter:14
+                                                          Position:Rifler
+                                                          Warum ich in dem Team bin weiß ich auch nicht aber ich will ein Teil dieses Team's sein. Ein Teil mit dem wir hoffentlich viel erreichen werden.
+                                                          </p>
                                 </div>
                             </div>
                         </li>
