--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                                     <h4 class="subheading">Paytix</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Name:Justin
-                                                          Alter:14
-                                                          Position:Rifler
+                                    <p class="text-muted">Name:Justin<br>
+                                                          Alter:14<br>
+                                                          Position:Rifler<br>
                                                           Warum ich in dem Team bin weiß ich auch nicht aber ich will ein Teil dieses Team's sein. Ein Teil mit dem wir hoffentlich viel erreichen werden.
                                                           </p>
                                 </div>
