--- a/index.html
+++ b/index.html
@@ -215,11 +215,15 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Rifler/Smg</h4>
+                                    <h4>Submaschinegun</h4>
                                     <h4 class="subheading">MrFabou</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Name: Fabian<br>
+                                                          Alter: 18<br>
+                                                          Position: SubMaschinegun
+                                                          Trotz noch nicht langer Erfahrung spiel ich sehr effective in diesem Team, dies ist warscheinlich auch durch meine langjährige Erfahrung in verschiedensten Shootern möglich.                                                         
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -247,9 +251,9 @@
                                     <h4 class="subheading">Paytix</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Name:Justin<br>
-                                                          Alter:14<br>
-                                                          Position:Rifler<br>
+                                    <p class="text-muted">Name: Justin<br>
+                                                          Alter: 14<br>
+                                                          Position: Rifler<br>
                                                           Warum ich in dem Team bin weiß ich auch nicht aber ich will ein Teil dieses Team's sein. Ein Teil mit dem wir hoffentlich viel erreichen werden.
                                                           </p>
                                 </div>
