--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
+        <div class="container cobra">
             <div class="intro-text">
                 <div class="intro-lead-in">Real Gaming</div>
                 <div class="intro-heading">BundesCobras	</div>
