--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="bg-darkest-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
