--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         </div>
     </section>
     
-
+color: @cobra-green-dark;
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
@@ -336,7 +336,7 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
-                                </div>
+                                </div>color: @cobra-green-dark;
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
@@ -365,7 +365,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
+                    <span class="copyright">Copyright &copy; </span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -376,7 +376,7 @@
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
-                </div>
+                </div>color: @cobra-green-dark;
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
