--- a/index.html
+++ b/index.html
@@ -364,24 +364,13 @@ color: @cobra-green-dark;
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; </span>
+                <div class="col-md-6">
+                    <span class="copyright">Alle Rechte vorbehalten</span>
                 </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>color: @cobra-green-dark;
-                <div class="col-md-4">
+ 
+                <div class="col-md-6">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="#">Impressum</a>
                         </li>
                     </ul>
                 </div>
