--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ color: @cobra-green-dark;
  
                 <div class="col-md-6">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Impressum</a>
+                        <li><a href="Impressum.html">Impressum</a>
                         </li>
                     </ul>
                 </div>
