--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ color: @cobra-green-dark;
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
-                                </div>color: @cobra-green-dark;
+                                </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
