--- a/Impressum.html
+++ b/Impressum.html
@@ -8,7 +8,7 @@
 <h1>Impressum BundesCobras</h1><br>
 Die Seite BundesCobras... wird betrieben von Torben Baumgartner, Innsbruck,AT und Justin ...,Oldenburg,DE.
 <br>
-Die Grafischen Inhalte dieser Webseite sind Urheberechtlich geschützt. Jegliche verwendung bedarf des Einverständnis der Urheber
+Die grafischen Inhalte dieser Webseite sind Urheberechtlich geschützt. Jegliche Verwendung bedarf des Einverständnis der Urheber
 <br>
 Die Theme basiert auf <a href="https://startbootstrap.com/template-overviews/agency/">StartBootstrap Agency</a>(MIT License)
 
