--- a/Impressum.html
+++ b/Impressum.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Impressum BundesCobras</h1><br>
-Die Seite BundesCobras... wird betrieben von Torben Baumgartner, Innsbruck,AT und Justin ...,Oldenburg,DE.
+Die Seite BundesCobras.eu wird betrieben von Torben Baumgartner, Innsbruck,AT und Justin Gräßler,Oldenburg,DE.
 <br>
 Die grafischen Inhalte dieser Webseite sind Urheberechtlich geschützt. Jegliche Verwendung bedarf des Einverständnis der Urheber
 <br>
