--- a/csgo.html
+++ b/csgo.html
@@ -9,7 +9,7 @@
     <meta name="description" content="CS:Go Clan">
     <meta name="author" content="Toalba">
 
-    <title>BundesCobras-Rainbow Team</title>
+    <title>BundesCobras-Cs:Go Team</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Rainbow Six-Team</h2>
+                    <h2 class="section-heading">Cs:GO-Team</h2>
                     <h3 class="section-subheading text-muted">Aktuelle Spieler</h3>
                 </div>
             </div>
