--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Matches</h2>
-                    <h3 class="section-subheading text-muted">Hier sind unsere Trainingspläne und Matches für Cs:Go.</h3>
+                    <h2 class="section-heading">Teams & Games</h2>
+                    <h3 class="section-subheading text-muted">Hier sind unsere Teams und Netzwerke.</h3>
                 </div>
             </div>
             <div class="row">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="file:///home/toalba/workspace-webseite/bundescobras/rainbow.html" class="portfolio-link" data-toggle="modal">
+                    <a href="rainbow.html" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="csgo.html" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
