--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="CS:Go Clan">
+    <meta name="description" content="ESL Clan">
     <meta name="author" content="Toalba">
 
     <title>BundesCobras</title>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://discord.gg/gnhq45N" class="portfolio-link" data-toggle="modal">
+                    <a href="https://discord.gg/8hVhGTE" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -173,7 +173,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Discord</h4>
-                        <p class="text-muted">Unser Discord, kommt und zockt mit!</p>
+                        <p class="text-muted">Unser Discord, komm und zock mit!</p>
                     </div>
                 </div>
             </div>
