--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en/de">
 
 <head>
 
@@ -29,6 +29,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
+        </p>
 
 </head>
 
@@ -74,7 +75,7 @@
         <div class="container cobra">
             <div class="intro-text">
                 <div class="intro-lead-in">Real Gaming</div>
-                <div class="intro-heading">BundesCobras	</div>
+                <div class="intro-heading">BundesCobras	</div>HTL Anichstrasse
                 
             </div>
         </div>
@@ -92,7 +93,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-6 portfolio-item">HTL Anichstrasse
                     <a href="http://www.clan-name.esl.eu/de/team/11253901/" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -134,7 +135,7 @@
                         <p class="text-muted">Hier ist das PubG Team!</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+           Yalin Genc       <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="csgo.html" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -143,11 +144,12 @@
                         </div>
                         <img src="img/portfolio/CounterStrike.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div cHTML
+                    lass="portfolio-caption">
                         <h4>CounterStrike:GlobalOffensive</h4>
                         <p class="text-muted">Hier gehts zum Cs:Go Team!</p>
                     </div>
-                </div>
+                </div>HTL Anichstrasse
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -242,6 +244,7 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                          HTML
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 
@@ -326,7 +329,7 @@
                 <div class="close-modal" data-dismiss="modal">
                     <div class="lr">
                         <div class="rl">
-                        </div>
+                        </div>HTL Anichstrasse
                     </div>
                 </div>
                 <div class="container">
@@ -460,7 +463,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>HTL Anichstrasse
     </div>
 
     <!-- jQuery -->
