--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container cobra">
             <div class="intro-text">
                 <div class="intro-lead-in">Real Gaming</div>
-                <div class="intro-heading">BundesCobras	</div>HTL Anichstrasse
+                <div class="intro-heading">BundesCobras	</div>
                 
             </div>
         </div>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">HTL Anichstrasse
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="http://www.clan-name.esl.eu/de/team/11253901/" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -135,7 +135,7 @@
                         <p class="text-muted">Hier ist das PubG Team!</p>
                     </div>
                 </div>
-           Yalin Genc       <div class="col-md-4 col-sm-6 portfolio-item">
+                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="csgo.html" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
