--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
                         </div>
                         <img src="img/portfolio/CounterStrike.jpg" class="img-responsive" alt="">
                     </a>
-                    <div cHTML
-                    lass="portfolio-caption">
+                    <div class="portfolio-caption">
                         <h4>CounterStrike:GlobalOffensive</h4>
                         <p class="text-muted">Hier gehts zum Cs:Go Team!</p>
                     </div>
