--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.ea.com/de-de/games/starwars/battlefront/battlefront-2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/swbf2.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Star Wars Battlfront 2</h4>
+                        <p class="text-muted">Lang lebe das Imperium der BundesCobras</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
