--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Teams&Games</a>
-                    </li>
-                    
                     <li>
                         <a class="page-scroll" href="#services">Channels</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Teams&Games</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Message</a>
@@ -92,7 +90,7 @@
         </div>
     </div>
     <!-- Add a placeholder for the Twitch embed -->
-<div id="twitch-embed"class="text-center"></div>
+<div id="twitch-embed"class="text-center">
 
 
 <!-- Load the Twitch embed script -->
@@ -106,6 +104,7 @@ height: 600,
 channel: "BundesCobra"
 });
 </script>
+</div>
         <div class="row text-center">
             <div class="col-md-4">
                 <a class="fa-stack fa-4x" href="https://twitter.com/bundescobras">
