--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="ESL Clan">
     <meta name="author" content="Toalba">
 
-    <title>BundesCobras</title>
+    <title>BundesCobra</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
